WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257397
window.stop() should fire abort events on XMLHttpRequest asynchronously
https://bugs.webkit.org/show_bug.cgi?id=257397
Summary
window.stop() should fire abort events on XMLHttpRequest asynchronously
Chris Dumez
Reported
2023-05-26 15:21:14 PDT
window.stop() should fire abort events on XMLHttpRequest asynchronously, to match the behavior of Blink and Gecko.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-05-26 15:26:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14406
EWS
Comment 2
2023-05-31 16:27:03 PDT
Committed
264765@main
(02e1d3e39f48): <
https://commits.webkit.org/264765@main
> Reviewed commits have been landed. Closing PR #14406 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-31 16:28:17 PDT
<
rdar://problem/110086856
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug